# detalles-back

./: .env  .env.example  .gitignore  auth.py  cloudinary_utils.py  database.py  email_utils.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  supabase_schema.sql
api/: index.py
routers/: arrangements.py  auth.py  categories.py  comments.py  settings.py  stats.py
